src/test/ui/generic-associated-types/issue-87429-associated-type-default.stderr
error[E0277]: can't compare `Foo` with `Foo`
  --> $DIR/issue-87429-associated-type-default.rs:14:5
   |
LL |     type Member<'a>: for<'b> PartialEq<Self::Member<'b>> = Foo;
   |     ^^^^^^^^^^^^^^^^^-----------------------------------^^^^^^^
   |     |                |
   |     |                required by this bound in `Family2::Member`
   |     no implementation for `Foo == Foo`
   |
   = help: the trait `PartialEq` is not implemented for `Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
